jacoco integration, need to fix DBInitiatorTest
Surefire-reports dir
database.DBInitiatorTest.txt